Sync all content

--- a/content/resources/2-25f13-th.md
+++ b/content/resources/2-25f13-th.md
@@ -20,6 +20,7 @@ image_metadata:
   image-alt: Photo series showing large drop formed from thin liquid stream.
 learning_resource_types: []
 ocw_type: OCWImage
+parent_uid: null
 resourcetype: Image
 title: 2-25f13-th.jpg
 uid: aef2808d-e26d-90bc-f8e4-65737a4b6e01
