--- a/content/resources/2-25f13.md
+++ b/content/resources/2-25f13.md
@@ -20,6 +20,7 @@ image_metadata:
   image-alt: Photo series showing large drop formed from thin liquid stream.
 learning_resource_types: []
 ocw_type: OCWImage
+parent_uid: null
 resourcetype: Image
 title: 2-25f13.jpg
 uid: fe0b243e-8145-2333-f3ab-d2b462058f44
