--- a/content/resources/2-25f13.md
+++ b/content/resources/2-25f13.md
@@ -7,15 +7,16 @@ description: This photo sequence shows the "gobbling droplets" phenomenon. A jet
   has the time to gobble many of its incoming neighbors before its detachment. Photo
   by Jose Bico and Christian Clasen, used courtesy of Prof. Gareth McKinley.
 file: /courses/2-25-advanced-fluid-mechanics-fall-2013/fe0b243e81452333f3abd2b462058f44_2-25f13.jpg
+file_size: 44896
 file_type: image/jpeg
 image_metadata:
-  caption: This photo sequence shows the "[gobbling droplets](http://web.mit.edu/nnf/people/jbico/Research.html#gobbling)"
-    phenomenon. A jet of liquid is unstable because of surface tension and usually
-    breaks into small droplets. The addition of minute quantities of polymeric molecules
-    provides an additive elastic stress which stabilizes the liquid column. In this
-    situation the terminal droplet has the time to gobble many of its incoming neighbors
-    before its detachment. (Photo by Jose Bico and Christian Clasen, used courtesy
-    of Prof. Gareth McKinley.)
+  caption: This photo sequence shows the "{{% resource_link "826d5e6f-5755-4b8d-a299-1675d2ca985d"
+    "gobbling droplets" %}}" phenomenon. A jet of liquid is unstable because of surface
+    tension and usually breaks into small droplets. The addition of minute quantities
+    of polymeric molecules provides an additive elastic stress which stabilizes the
+    liquid column. In this situation the terminal droplet has the time to gobble many
+    of its incoming neighbors before its detachment. (Photo by Jose Bico and Christian
+    Clasen, used courtesy of Prof. Gareth McKinley.)
   credit: Photo by Jose Bico and Christian Clasen, used courtesy of Prof. Gareth McKinley.
   image-alt: Photo series showing large drop formed from thin liquid stream.
 learning_resource_types: []
